--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -1,5 +1,6 @@
 set_vkimow_subsolution(Engine)
 add_subdirectory(Tools)
+add_subdirectory(Objects)
 add_subdirectory(Input)
 add_subdirectory(Graphics)
 add_subdirectory(Main)
@@ -8,6 +9,7 @@ add_vkimow_custom_build_target(
     NAME            Main_Tests
     SOLUTION_FOLDER ${SPACE_CURRENT_SUBSOLUTION_TESTS_RELATIVE_PATH}
     DEPENDENCIES    Tools_Tests
+                    Objects_Tests
                     Input_Tests
                     Graphics_Tests
 )
