--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -6,12 +6,15 @@ add_subdirectory(Audio)
 add_subdirectory(Graphics)
 add_subdirectory(Main)
 
-add_vkimow_custom_build_target(
-    NAME            Main_Tests
-    SOLUTION_FOLDER ${SPACE_CURRENT_SUBSOLUTION_TESTS_RELATIVE_PATH}
-    DEPENDENCIES    Tools_Tests
-                    Objects_Tests
-                    Input_Tests
-                    Graphics_Tests
-                    Audio_Tests
-)
+
+if(SPACE_ENABLE_TESTS)
+    add_vkimow_custom_build_target(
+        NAME            Main_Tests
+        SOLUTION_FOLDER ${SPACE_CURRENT_SUBSOLUTION_TESTS_RELATIVE_PATH}
+        DEPENDENCIES    Tools_Tests
+                        Objects_Tests
+                        Input_Tests
+                        Graphics_Tests
+                        Audio_Tests
+    )
+endif()
