--- a/src/Engine/Objects/Tests/CMakeLists.txt
+++ b/src/Engine/Objects/Tests/CMakeLists.txt
@@ -27,12 +27,10 @@ add_vkimow_executable(
     NAME ${PROJECT_NAME}
     SOLUTION_FOLDER ${SPACE_CURRENT_SUBSOLUTION_TESTS_RELATIVE_PATH}
     SOURCES ${SPACE_CURRENT_SOURCES}
-    PRIVATE_LINK_LIBS   space::engine::objects
+    PRIVATE_LINK_LIBS   glm
+                        space::engine::objects
                         space::engine::tools
                         Catch2::Catch2WithMain
-                        glew
-                        glfw
-                        glm
     PRIVATE_INCLUDE_DIRS ${SPACE_INCLUDE_DIR}
 )
 
