--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -6,11 +6,11 @@ list(APPEND CMAKE_PREFIX_PATH ${SPACE_EXTERNAL_DIR})
 include(glew)
 include(glfw)
 include(glm)
-include(assimp)
-include(sdl2)
-include(sdl_image)
-include(sndfile)
-include(soloud)
+#include(assimp)
+#include(sdl2)
+#include(sdl_image)
+#include(sndfile)
+#include(soloud)
 include(imgui)
 include(catch2)
 include(spdlog)
