--- a/src/Engine/Audio/CMakeLists.txt
+++ b/src/Engine/Audio/CMakeLists.txt
@@ -46,10 +46,9 @@ add_vkimow_library(
     NAME ${PROJECT_NAME}
     SOLUTION_FOLDER ${SPACE_CURRENT_SUBSOLUTION_RELATIVE_PATH}
     SOURCES ${SPACE_CURRENT_SOURCES} ${SPACE_CURRENT_PUBLIC_HEADERS}
-    PUBLIC_LINK_LIBS    sndfile
-                        soloud
+    #PUBLIC_LINK_LIBS    sndfile
+    #                    soloud
     PRIVATE_LINK_LIBS   space::engine::tools
-                        glfw
     PRIVATE_INCLUDE_DIRS ${SPACE_INCLUDE_DIR}
 )
 
